--- a/muPod.ioc
+++ b/muPod.ioc
@@ -23,36 +23,49 @@ FATFS0.BSP.semaphore=
 FATFS0.BSP.solution=PA15
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2S2.AudioFreq=I2S_AUDIOFREQ_48K
+I2S2.ErrorAudioFreq=-2.34 %
+I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_ENABLE
+I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,AudioFreq
+I2S2.Instance=SPI$Index
+I2S2.RealAudioFreq=46.875 KHz
+I2S2.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
 Mcu.IP0=FATFS
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SDIO
-Mcu.IP4=SYS
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP1=I2S2
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SDIO
+Mcu.IP5=SYS
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA14
-Mcu.Pin11=PA15
-Mcu.Pin12=PC12
-Mcu.Pin13=PD2
-Mcu.Pin14=PB3
-Mcu.Pin15=VP_FATFS_VS_SDIO
-Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin10=PB10
+Mcu.Pin11=PB12
+Mcu.Pin12=PC6
+Mcu.Pin13=PC8
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PA15
+Mcu.Pin17=PC12
+Mcu.Pin18=PD2
+Mcu.Pin19=PB3
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=VP_FATFS_VS_SDIO
+Mcu.Pin21=VP_SYS_VS_Systick
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PC8
-Mcu.Pin9=PA13
-Mcu.PinsNb=17
+Mcu.Pin5=PC2
+Mcu.Pin6=PC3
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA5
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -106,6 +119,10 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PB10.Mode=Full_Duplex_Master
+PB10.Signal=I2S2_CK
+PB12.Mode=Full_Duplex_Master
+PB12.Signal=I2S2_WS
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -125,6 +142,12 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.Mode=Full_Duplex_Master
+PC2.Signal=I2S2_ext_SD
+PC3.Mode=Full_Duplex_Master
+PC3.Signal=I2S2_SD
+PC6.Mode=Master_Clock_Activated
+PC6.Signal=I2S2_MCK
 PC8.Mode=SD_1_bit
 PC8.Signal=SDIO_D0
 PD2.Mode=SD_1_bit
@@ -166,7 +189,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,4-MX_FATFS_Init-FATFS-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_FATFS_Init-FATFS-false-HAL-false,5-MX_SDIO_SD_Init-SDIO-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
